--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.15.2",
-    "express": "4.14.0",
-    "smooch-core": "2.1.1"
+    "express": "4.14.0"
   }
 }
