--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "spasiu",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "1.15.2",
     "express": "4.14.0",
