Updated package name

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "body-parser": "1.15.2",
     "express": "4.14.0",
-    "sunshine-conversations-client": "6.0.0"
+    "sunshine-conversations-client": "^9.0.0"
   }
 }
