--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "smooch-api-quickstart-example",
+  "name": "sunshine-conversations-api-quickstart-example",
   "version": "1.0.0",
-  "description": "Sample code to get started with the Smooch REST APIs",
+  "description": "Sample code to get started with the Sunshine Conversations REST APIs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "spasiu",
+  "author": "zendesk",
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.19.0",
     "express": "4.17.1",
-    "sunshine-conversations-client": "^9.6.0"
+    "sunshine-conversations-client": "^14.4.0"
   }
 }
